[package]
name = "infinity-download-fragmenter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
hex = "0.4.3"
bsdiff = { git = "https://github.com/space-wizards/bsdiff-rs" }
tokio = { version = "1", features = ["full"] }
zip = "0.6.6"
rayon = "1.10.0"
bidiff = { git = "https://github.com/divvun/bidiff" }
flate2 = "1.0.28"
